--- a/app/index.html
+++ b/app/index.html
@@ -8,15 +8,18 @@
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <script src="https://use.typekit.net/qrm7ucc.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
-
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
   <link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
   <link rel="stylesheet" href="/bower_components/components-font-awesome/css/font-awesome.css" />
   <!-- endbower -->
   <!-- endbuild -->
+  <script src="/bower_components/three.js/build/three.min.js"></script>
+  <script src="/bower_components/three.js/build/three.module.js"></script>
+  <script src="scripts/projector-renderer.js"></script>
+  <script src="scripts/canvas-renderer.js"></script>
+  <script src="scripts/stats.js"></script>
+  <script src="scripts/animation.js"></script>
 
   <!-- build:css styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
@@ -94,7 +97,8 @@
       </header>
       <!-- header -->
 
-      <section class="intro text-center row justify-content-md-center">
+      <section class="intro text-center row justify-content-md-center" id="intro">
+        <div id="animation"></div>
         <div class="col-xs-12 col-md-6">
           <h6>Introducing ignition search </h6>
           <h2>Performance Agency</h2>
@@ -144,7 +148,6 @@
         </div>
       </section>
       <!-- case-studies -->
-
       <section class="contact">
         <h2 class="fade-out">Contact</h2>
         <div class="container">
@@ -269,7 +272,6 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
     <script src="/bower_components/slick-carousel/slick/slick.js"></script>
-    <script src="/bower_components/three.js/build/three.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
