more styles, add progress bar to slider

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
               <h2>Search Engine Optimisation</h2>
               <p><strong>Grow your brand oganically.</strong> Give your customers expert content and increase Google visibility.</p>
               <a href="/seo.html" class="btn btn-learn-more">Learn more about SEO</a>
-              <a href="#" class="btn btn-next-service">Next Service</a>
+              <a href="#" class="btn btn-next-service">Next Service ⟶</a>
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
               <h2>Pay Per Click</h2>
               <p><strong>Delivering customers instantly.</strong>  Bring targeted visitors each day, every day. </p>
               <a href="/seo.html" class="btn btn-learn-more">Learn more about PPC</a>
-              <a href="#" class="btn btn-next-service">Next Service</a>
+              <a href="#" class="btn btn-next-service">Next Service ⟶</a>
             </div>
           </div>
         </div>
@@ -90,7 +90,7 @@
               <h2>Conversion Rate Optimisation</h2>
               <p><strong>A better, not bigger, spend.</strong> Drive healthier results and increase your bottom line.</p>
               <a href="/seo.html" class="btn btn-learn-more">Learn more about CRO</a>
-              <a href="#" class="btn btn-next-service">Next Service</a>
+              <a href="#" class="btn btn-next-service">Next Service ⟶</a>
             </div>
           </div>
         </div>
@@ -272,6 +272,7 @@
     <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/bower_components/popper.js/dist/umd/popper.js"></script>
     <script src="/bower_components/slick-carousel/slick/slick.js"></script>
+    <script src="/bower_components/three.js/build/three.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     
