Finish intro start case studies

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <![endif]-->
     
     <nav class="navbar navbar-expand-md fixed-top">
-      <a class="navbar-brand" href="#">Ignition Search</a>
+      <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -100,40 +100,51 @@
       <section class="intro text-center row justify-content-md-center" id="intro">
         <div id="animation"></div>
         <div class="col-xs-12 col-md-6">
-          <h6>Introducing ignition search </h6>
+          <h6 class="bold uppercase">Introducing ignition search </h6>
           <h2>Performance Agency</h2>
           <p>We help businesses grow their revenue, sales enquiries and customer base through high quality internet marketing services. </p>
-          <a href="/about.html" class="btn btn-orange">Learn more about us</a><a href="/contact.html" class="btn btn-orange">Get in touch</a>
-          <a href="/portfolio.html" class="latest-work uppercase">View latest work</a>
+          <a href="/about.html" class="btn mr-2 btn-orange">Learn more about us</a><a href="/contact.html" class="btn btn-orange">Get in touch</a>
+          <a href="/portfolio.html" class="d-block mt-5 small-grey-text latest-work uppercase">View latest work</a>
         </div>
       </section>
       <!-- intro -->
 
       <section class="case-studies">
         <div class="container">
-          <div class="case-studies-carousel">
-            <div class="row case">
-              <div class="col-xs-6">
-                <figure><img src="images/origin global.jpg" alt=""></figure>
-              </div>
-              <div class="col-xs-6">
-                <h6 class="client uppercase">Origin global</h6>
+          <div class="row justify-content-md-center">
+            <div class="col-xs-12 col-md-10">
+              <div class="case-studies-carousel">
+            <div class="case">
+              <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                  <figure><img class="img-fluid" src="images/case-studies/origin-global.jpg" alt=""></figure>
+                </div>
+              <div class="col-xs-12 col-sm-6">
+                <h6 class="client small-grey-text">Origin global</h6>
                 <h2 class="case-title">Driving the business forward following a complex Google penalty </h2>
                 <p class="service"><strong>Project services: </strong>Search Engine Optimization</p>
+                <a href="/case.html" class="btn btn-orange clear">View case study</a>
               </div>
             </div>
+          </div>
 
-            <div class="row case">
-              <div class="col-xs-6">
-                <figure><img src="#" alt=""></figure>
-              </div>
-              <div class="col-xs-6">
-                <h6 class="client uppercase">PRETTY GREEN</h6>
-                <h2 class="case-title">£1 million return from £45k spend. </h2>
-                <p class="service"><strong>Project services: </strong>PPC, CRO</p>
+            <div class="case">
+              <div class="row">
+                <div class="col-xs-12 col-sm-6">
+                  <figure><img class="img-fluid" src="images/case-studies/captain-cover.jpg" alt=""></figure>
+                </div>
+                <div class="col-xs-12 col-sm-6">
+                  <h6 class="client small-grey-text">PRETTY GREEN</h6>
+                  <h2 class="case-title">£1 million return from £45k spend. </h2>
+                  <p class="service"><strong>Project services: </strong>PPC, CRO</p>
+                  <a href="/case.html" class="btn btn-orange clear">View case study</a>
+                </div>
               </div>
             </div>
           </div> <!-- case studies carousel -->
+            </div>
+          </div>
+          
 
           <ul class="trusted-by-carousel">
             <li><img src="images/trusted/trusted1.jpg" alt=""></li>
