--- a/app/index.html
+++ b/app/index.html
@@ -145,7 +145,7 @@
             </div>
           </div>
           
-
+          <h6 class="small-grey-text text-center mt-3">Trusted by</h6>
           <ul class="trusted-by-carousel">
             <li><img src="images/trusted/trusted1.jpg" alt=""></li>
             <li><img src="images/trusted/trusted2.png" alt=""></li>
@@ -163,7 +163,7 @@
         <h2 class="fade-out">Contact</h2>
         <div class="container">
           <div class="row">
-            <div class="col-xs-12 col-md-5">
+            <div class="col-xs-12 col-md-5 contact-info">
               <h2>Get in touch</h2>
               <div class="col-xs-6">
                 <span class="grey uppercase">Office address</span>
