add case studies img

--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
             <div class="case">
               <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                  <figure><img class="img-fluid" src="images/case-studies/origin-global.jpg" alt=""></figure>
+                  <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
                 </div>
               <div class="col-xs-12 col-sm-6">
                 <h6 class="client small-grey-text">Origin global</h6>
@@ -139,7 +139,7 @@
             <div class="case">
               <div class="row">
                 <div class="col-xs-12 col-sm-6">
-                  <figure><img class="img-fluid" src="images/case-studies/captain-cover.jpg" alt=""></figure>
+                  <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
                 </div>
                 <div class="col-xs-12 col-sm-6">
                   <h6 class="client small-grey-text">PRETTY GREEN</h6>
