--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
     
     <nav class="navbar navbar-expand-md fixed-top">
       <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
-        <ul class="navbar-nav ml-auto">
+        <ul class="navbar-nav ml-auto d-none d-sm-none">
           <li class="nav-item active">
             <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
           </li>
@@ -44,7 +44,7 @@
             <a class="nav-link" href="#">Conversion Rate Optimisation</a>
           </li>
         </ul>
-        <a class="mobile bold ml-auto" tel="#">0114 272 2444</a>
+        <a class="mobile bold d-none ml-auto" tel="#">0114 272 2444</a>
         <a href="#" class="menu-link fa fa-bars"></a>
     </nav>
 
