more service page

--- a/app/service.html
+++ b/app/service.html
@@ -26,7 +26,7 @@
   <!-- endbuild -->
 
 </head>
-<body>
+<body class="single-service">
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
@@ -49,7 +49,7 @@
       </nav>
 
       <header>
-        <div class="content-seo">
+        <div class="content-seo centered">
         <!-- 
           <svg width="1920" height="1080" viewBox="0 0 1920 1080">
             <defs>
@@ -59,14 +59,15 @@
             </defs>
             <image mask="url(#hero-mask)" width="1920" height="1080" xlink:href="images/hero1.jpg"/>
           </svg> -->
-          <figure><img class="img-fluid" src="images/home/home_1.jpg" alt=""></figure>
-          <div class="container">
-            <div class="service-content">
+          <figure><img class="cover img-fluid" src="images/home/home_1.jpg" alt=""></figure>
+          <div class="container p-absolute">
+            <div class="service-content text-center">
               <h2>Search Engine Optimisation</h2>
-              <a href="#" class="btn btn-back">←</a>
-              <a href="/service.html" class="btn btn-learn-more">Learn more about PPC</a>
+              
             </div>
           </div>
+          <a href="#" class="btn btn-back">←</a>
+          <a href="/service.html" class="btn btn-learn-more">Learn more about PPC</a>
         </div>
         <div class="scroll-for-more"><span>Scroll <br/> for more</span></div>
       </header>
