--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,9 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     
-    <nav class="navbar navbar-expand-md fixed-top">
-      <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
-        <ul class="navbar-nav ml-auto d-none d-sm-none">
+    <nav class="navbar transparent fixed-top">
+        <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
           </li>
@@ -46,7 +46,7 @@
         </ul>
         <a class="mobile bold d-none ml-auto" tel="#">0114 272 2444</a>
         <a href="#" class="menu-link fa fa-bars"></a>
-    </nav>
+      </nav>
 
       <header class="carousel">
         <div class="content-seo">
