--- a/app/service.html
+++ b/app/service.html
@@ -31,9 +31,9 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
 
-      <nav class="navbar navbar-expand-md fixed-top">
+      <nav class="navbar transparent fixed-top">
         <a class="navbar-brand" href="#"><img src="images/logos/logo-white-transparent.png" alt=""></a>
-        <ul class="navbar-nav ml-auto d-none d-sm-none">
+        <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
             <a class="nav-link" href="#">Search Engine Optimisation <span class="sr-only">(current)</span></a>
           </li>
@@ -66,10 +66,10 @@
               
             </div>
           </div>
-          <a href="#" class="btn btn-back">←</a>
-          <a href="/service.html" class="btn btn-learn-more">Learn more about PPC</a>
+          <a href="#" class="btn btn-back btn-transparent d-none d-lg-block">← <span class="with-content">Learn more about CRO</span> </a>
+          <a href="/service.html" class="btn btn-learn-more-right btn-transparent d-none d-lg-block"><span class="with-content">Learn more about PPC</span> →</a>
         </div>
-        <div class="scroll-for-more"><span>Scroll <br/> for more</span></div>
+        <div class="scroll-for-more centered"><span>Scroll <br/> for more</span></div>
       </header>
       <!-- header -->
 
@@ -77,12 +77,11 @@
         <div id="animation"></div>
         <div class="container">
           <div class="row justify-content-md-center">
-            <div class="col-xs-12 col-md-6">
-              <h3>Increase your website visibility through high quality content production and originally researched link building ideas.</h2>
-                <p><span class="dash"></span>Give your customers expert content, grow your brand </p>
+            <div class="col-12 col-lg-6 centered column bordered">
+              <h3 class="mb-5">Increase your website visibility through high quality content production and originally researched link building ideas. </h2>
+                <p class="grey dash-before">Give your customers expert content, grow your brand and Google visibility</p>
               </div>
-              <div class="col-xs-12 col-md-6">
-                <h6 class="bold uppercase">Introducing ignition search </h6>
+              <div class="col-12 col-lg-6 centered column">
                 <h3>What can we do for your business</h3>
                 <a href="/portfolio.html" class="d-inline-block btn btn-orange">Get in touch</a>
               </div>
@@ -95,12 +94,12 @@
         <section class="why">
           <div class="container">
             <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <figure><img class="img-fluid" src="images/case-studies/case-img.png" alt=""></figure>
+              <div class="col-12 col-md-6">
+                <figure><img class="img-fluid" src="images/service/why.jpg" alt=""></figure>
               </div>
-              <div class="col-xs-12 col-md-6">
+              <div class="col-12 col-md-6 center-vert">
                 <h3 class="case-title">Why?</h3>
-                <p class="description"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis, corporis fuga assumenda molestiae voluptas cumque, aliquam excepturi, eveniet nihil velit sunt nobis enim iste laborum, rerum quam quos neque. Reiciendis.</span><span>Illum nemo doloremque alias iste placeat quis consectetur vero. Necessitatibus saepe eum architecto sunt perspiciatis, iusto molestiae nostrum, accusamus vel esse veritatis debitis assumenda mollitia voluptatum! Tenetur voluptates, fugiat modi!</span></p>
+                <p class="description">There are multiple factors that affect your website's ranking in the search engines and with the organic search landscape constantly evolving, increasing authority content, gaining quality links and offering an enhanced user experience onsite is paramount to maintaining your market share. </p>
               </div>
             </div>
           </div>
@@ -110,32 +109,34 @@
         <section class="how">
           <div class="container">
             <div class="row">
-              <div class="col-xs-12 col-md-6">
+              <div class="col-12 col-lg-6 mb-5">
                 <h3>How?</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos culpa est earum provident hic repudiandae labore laborum, totam quaerat commodi, inventore nisi aliquam modi a, molestias, tempore voluptatibus laboriosam fugiat.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quisquam ipsam ratione in provident. Repellat quis commodi, recusandae tempore, molestiae provident animi aut doloremque itaque veniam numquam quidem earum eos!Nam quisquam ipsam ratione in provident. Repellat quis commodi, recusandae tempore, molestiae provident animi aut doloremque itaque veniam numquam quidem earum eos!</p>
+                <p>Whilst getting people to your site is a pre-requisite of search, we believe converting them into business is even more important. </p>
+                <p> 
+                Our flexible, bespoke approach to improving your organic search is meticulously planned and constantly reviewed to ensure you're one step ahead of the competition. From the latest technological tools, to carefully crafted content that is relevant to your brand and customers - we listen, we act and we get you results:
+                </p>
               </div>
             </div>
             <div class="row">
-              <div class="col-xs-6 col-md-3">
-                <img src="" alt="" class="icon">
+              <div class="col-6 col-lg-3">
+                <img src="images/bulb-icon.png" alt="" class="icon">
                 <h3>Technical SEO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorem eaque pariatur fuga tenetur tempore labore minima? Possimus quae corrupti dolores sit architecto praesentium? Exercitationem minima illo magnam hic accusantium.</p>
+                <p>From keyword research to the more complex site architecture best practices, we overcome and fix any technical issues you may have that are holding you back. </p>
               </div>
-              <div class="col-xs-6 col-md-3">
-                <img src="" alt="" class="icon">
-                <h3>Technical SEO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio neque itaque vitae adipisci sed iusto commodi voluptatem sunt nesciunt asperiores quidem, ratione aut, nobis nam voluptatibus eligendi ullam dolore ab?</p>
+              <div class="col-6 col-lg-3">
+                <img src="images/bulb-icon.png" alt="" class="icon">
+                <h3>Content Creation</h3>
+                <p>We have a content led approach to our SEO, meaning that we focus on creating great content and building lasting relationships with other relevant websites</p>
               </div>
-              <div class="col-xs-6 col-md-3">
-                <img src="" alt="" class="icon">
-                <h3>Technical SEO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga quod quidem assumenda, neque repellat accusamus, fugiat saepe tempora qui explicabo nisi tempore illo architecto, ut veniam. Eum nemo tempora eaque?</p>
+              <div class="col-6 col-lg-3">
+                <img src="images/bulb-icon.png" alt="" class="icon">
+                <h3>Authority Building</h3>
+                <p>Our outreach team earns relevant links from authoritative domains to ensure your website is the expert in Google's eyes</p>
               </div>
-              <div class="col-xs-6 col-md-3">
-                <img src="" alt="" class="icon">
-                <h3>Technical SEO</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, repudiandae! Eum molestiae tenetur quaerat dicta neque inventore amet fugit expedita aperiam autem, numquam officia quam. Iusto vitae rerum sed eius!</p>
+              <div class="col-6 col-lg-3">
+                <img src="images/bulb-icon.png" alt="" class="icon">
+                <h3>User Focus</h3>
+                <p>We focus on understanding what factors influence your customers to purchase or request a service and ensure your pages are optimised to make them convert.</p>
               </div>
             </div>
           </div>
@@ -145,47 +146,45 @@
         <section class="outcomes">
           <div class="container">
             <div class="row">
-              <div class="col-xs-12 col-md-6">
+              <div class="col-12 col-lg-6">
                 <div class="row">
-                <div class="col-xs-12">
+                <div class="col-12">
                   <h3>Outcomes</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam quisquam ipsam ratione in provident. Repellat quis commodi, recusandae tempore, molestiae provident animi aut doloremque itaque veniam numquam quidem earum eos!Nam quisquam ipsam ratione in provident. Repellat quis commodi, recusandae tempore, molestiae provident animi aut doloremque itaque veniam numquam quidem earum eos!</p>
+                  <p>This mix delivers an unbeatable approach to attracting the highest value traffic available. Through authoritative and optimised relevant content, a steady build-up of natural links and a highly optimised online presence meant to meet Google's guidelines, our services ensure our clients derive superior value and results from the work we do:</p>
                 </div>
+              </div>
+              <div class="row">
 
-                <div class="col-xs-6 col-md-4">
-                  <img src="" alt="" class="icon">
-                  <h3>Technical SEO</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                <div class="col-6 col-lg-4">
+                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <h5>Improved User Experience</h5>
                 </div>
-                <div class="col-xs-6 col-md-4">
-                  <img src="" alt="" class="icon">
-                  <h3>Technical SEO</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                <div class="col-6 col-lg-4">
+                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <h5>Engaging Relevant Content </h5>
                 </div>
-                <div class="col-xs-6 col-md-4">
-                  <img src="" alt="" class="icon">
-                  <h3>Technical SEO</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. F?</p>
+                <div class="col-6 col-lg-4">
+                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <h5>High quality link building</h5>
                 </div>
-                <div class="col-xs-6 col-md-4">
-                  <img src="" alt="" class="icon">
-                  <h3>Technical SEO</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, repudiandae!</p>
+                <div class="col-6 col-lg-4">
+                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <h5>Technical excellence</h5>
                 </div>
-                <div class="col-xs-6 col-md-4">
-                  <img src="" alt="" class="icon">
-                  <h3>Technical SEO</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, repudiandae!</p>
+                <div class="col-6 col-lg-4">
+                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <h5>Brand building</h5>
                 </div>
-                <div class="col-xs-6 col-md-4">
-                  <img src="" alt="" class="icon">
-                  <h3>Technical SEO</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo, repudiandae!</p>
+                <div class="col-6 col-lg-4">
+                  <img src="images/bulb-icon.png" alt="" class="icon">
+                  <h5>Increased ROI</h5>
                 </div>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-6">
-                <img src="images/case-studies/case-img.png" alt="">
+              <div class="col-12 col-lg-6">
+                <figure>
+                  <img class="img-fluid" src="images/service/outcomes.jpg" alt="">
+                </figure>
               </div>
             </div>
           </div>
@@ -194,18 +193,27 @@
         <!-- outcomes -->
 
         <section class="case-examples">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <span class="title small-grey-text">Captain Cover</span>
-                <h3>Driving the business forward following a complex Google penalty</h3>
+            <div class="row no-gutters">
+              <div class="col-12 col-md-6">
+                <a href="">
+                <img src="images/service/origin-global.jpg" alt="" class="img-fluid">
+                <div class="centered-absolute">
+                  <span class="title small-grey-text">Origin Global</span>
+                  <h3>Driving the business forward following a complex Google penalty</h3>
+                </div>
+                </a>
               </div>
-              <div class="col-xs-12 col-md-6">
-                <span class="title small-grey-text">Captain Cover</span>
-                <h3>Driving the business forward following a complex Google penalty</h3>
+              <div class="col-12 col-md-6">
+                <a href="">
+                <img src="images/service/russums.jpg" alt="" class="img-fluid">
+                <div class="centered-absolute">
+                  <span class="title small-grey-text">Russums </span>
+                  <h3>Delivering 25% increase year- on – year in organic traffic</h3>
+                </div>
+                </a>
               </div>
+
             </div>
-          </div>
         </section>
 
 
@@ -214,7 +222,7 @@
           <h2 class="fade-out">Contact</h2>
           <div class="container">
             <div class="row">
-              <div class="col-xs-12 col-md-5 contact-info">
+              <div class="col-12 col-md-5 contact-info">
                 <h2>Get in touch</h2>
                 <div class="col-xs-6">
                   <span class="small-grey-text">Office address</span>
@@ -237,30 +245,30 @@
                   <p class="one-line red-line">info@ignitionsearch.co.uk</p>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-7">
+              <div class="col-12 col-md-7">
                 <div class="contact-form clearfix">
                   <form action="#">
                     <div class="form-row">
-                      <div class="form-group col-xs-12 col-sm-6">
+                      <div class="form-group col-12 col-sm-6">
                         <label class="col-form-label" for="name">Full Name*</label>
                         <input class="form-control" type="text" id="name" placeholder="John Doe">
                       </div>
-                      <div class="form-group col-xs-12 col-sm-6">
+                      <div class="form-group col-12 col-sm-6">
                         <label class="col-form-label" for="email">Email Address*</label>
                         <input class="form-control" type="email" placeholder="hello@example.com" id="email">
                       </div>
                     </div>
                     <div class="form-row">
-                      <div class="form-group col-xs-12 col-sm-6">
+                      <div class="form-group col-12 col-sm-6">
                         <label class="col-form-label" for="telephone">Telephone</label>
                         <input class="form-control" type="text" id="telephone" placeholder="(Optional)">
                       </div>
-                      <div class="form-group col-xs-12 col-sm-6">
+                      <div class="form-group col-12 col-sm-6">
                         <label class="col-form-label" for="company">Company</label>
                         <input class="form-control" type="text" id="company" placeholder="(Optional)">
                       </div>
                     </div>
-                    <div class="form-group col-xs-12">
+                    <div class="form-group col-12">
                       <label class="col-form-label" for="message">Message</label>
                       <textarea class="form-control" name="message" id="message" cols="30" rows="10" placeholder="What can we help you with?"></textarea>
                     </div>
@@ -276,7 +284,7 @@
         <footer>
           <div class="container">
             <div class="row">
-              <div class="col-xs-12 col-md-6">
+              <div class="col-12 col-md-6">
                 <h2 class="m-b-40">Be seen Be Found.</h2>
                 <span class="dash-grey"></span>
                 <ul class="social-media list-inline black">
@@ -291,9 +299,9 @@
                   <p class="one-line">Ignition Search Ltd &copy; 2017. All Rights Reserved.</p>
                 </div>
               </div>
-              <div class="col-xs-12 col-md-6 footer-menu">
+              <div class="col-12 col-md-6 footer-menu">
                 <div class="row">
-                  <div class="col-xs-12 col-sm-6">
+                  <div class="col-12 col-sm-6">
                     <ul>
                       <li><a href="#">Home</a></li>
                       <li><a href="#">Our Services</a></li>
@@ -304,7 +312,7 @@
                       <li><a href="#">Contact Us</a></li>
                     </ul>
                   </div>
-                  <div class="col-xs-12 col-sm-6">
+                  <div class="col-12 col-sm-6">
                     <ul>
                       <li><a href="#">Search Engine Optimization</a></li>
                       <li><a href="#">Pay Per Click</a></li>
